A raw brush-up with mark-up

--- a/2023-09-19-think-like-a-genius.org
+++ b/2023-09-19-think-like-a-genius.org
@@ -19,3 +19,240 @@ tags: []
 
 The [[https://www.youtube.com/watch?v=ocMH2l2ptpc][source]]
 
+
+* What is a mental model
+
+In this video you'll learn /nine different mental models/ that you can
+use to solve difficult problems, see the world in ways that no one
+else could even fathom and all around. Just improve how you think if
+you're wondering /what a mental model is/, - 
+
+#+begin_quote
+it's simply a representation of how the world works.
+#+end_quote
+
+
+
+We operate in a very complex world and it's impossible to truly
+understand all the different intricacies of everything that we
+experience. So in order to help us we use these different models in
+ideas that we do understand to aid us in learning about the things
+that we don't understand. Here's a quick example:
+
+#+begin_example
+let's say an environmentalist of botanist and a business person walk
+into a forest.  They're all going to focus on different things. The
+environmentalists may focus on the impact of climate change. The
+business person is probably going to look at the forest and see the
+immense value of the land and the botanist is going to focus on the
+ecosystem.
+#+end_example
+
+
+
+Each person essentially is simplifying the innate complexity of the
+forest into something that that they could understand with the limited
+knowledge.  What they have while doing this isn't necessarily
+bad. What they see is entirely limited to what they know and therefore
+they can't see the full scope of the forest. So one thing they may end
+up doing is sharing their specialized knowledge with each other. This
+creates a scenario where each person develops a much more well-rounded
+understanding of the forest, this is exactly what you do with mental
+models: you'll learn the fundamental concepts of other disciplines to
+help give you a bigger toolbox.
+
+If you will to sort of see the world through the more models you have
+the more lenses you can use while you look at the world and therefore
+the fewer blind spots that you end up having so now that you
+understand what a mental model is in the importance of using all of
+these different models throughout your life let's learn what some of
+those models actually are and how you can use them.
+
+
+* The Map is not the Territory
+
+
+One of the most important mental models to learn is _/map is not the
+territory/_.  This model teaches that the representation of reality is
+not actual reality even the best maps are imperfect because they are
+naturally reductions of what they represent if a map were to represent
+the territory with perfect Fidelity it would no longer be a reduction
+of the thing it would just be the thing like like imagine trying to
+navigate New York with a map the size of New York in your pocket there
+are just so many obvious reasons why that won't work at a more
+practical level the graph or the spreadsheet of the financials of the
+company isn't actually the financials of the company so it doesn't
+accurately represent the real important numbers in the dollars in your
+bank account the information about a project from your direct report
+isn't the actual project so before making decisions based on these
+assumptions and maps and reports and summaries you have to ensure that
+you understand 100 percent that there production of the thing is not
+the thing so make sure you get familiar with the actual territory
+before you make an important decision and not just go based on
+whatever the map is saying
+
+
+* Circle of Competence
+
+Circle of competence is simple each one of us through our experience
+and our study has built up useful knowledge on different areas of the
+world some of those areas are inside of our circle of competence and
+these are the things that we understand well if you work as a
+marketing director marketing is probably within your circle of
+competence product might be around the edges and Engineering is well
+outside of your circle of competence so now when you make a decision
+you can evaluate where the scope of that decision lies relative to
+your circle of competence if it falls inside of it you can make the
+decision with a confidence knowing that you have the expertise to make
+the decision if the decision Falls outside of the scope of your circle
+of competence that's when you can consult an expert whose circle of
+competence contains that decision Tom Watson the founder of IBM put it
+best when he said I'm no genius I'm smart in spots and I stay around
+those spots we should all aim to do the same
+
+
+* Second Order Thinking
+
+Almost everyone can anticipate the immediate results of their actions
+this type of first order thinking is easy and safe but it's also a way
+to ensure that you get the same results that everyone else does second
+order thinking is thinking further ahead and thinking holistically it
+not only requires us to consider our actions and their immediate
+consequences but also the consequences of those consequences there's a
+really famous story about this that is now called the Cobra effect and
+it's about in the 1900s British Colonials ruled India at the time but
+there was a massive Cobra problem they were just everywhere what the
+government did was they decided to pay citizens to kill snakes so
+citizens would kill the snakes and then bring them to the government
+and they get paid for kind of like a bounty system what ended up
+happening was the citizens just started breeding snakes so they could
+kill them to make more money once the government found out about this
+and ended the Bounty program the citizens now had no need for all
+these newborn snakes so they just let them loose in the street making
+the Cobra problem even worse off than it it was before this story
+illustrates the perfect example of what happens when someone doesn't
+consider the second order effects of their decisions you might be
+wondering where I'm getting this content from and it's from our actual
+books we've written three books on mental models and how to use them
+in your life we've also written hundreds of blog posts on our site
+fs.blog so if you want to learn more about any of these and go into
+more detail you can visit our site again that's fs.blog or you can
+visit the link it's linked down in the description below
+
+
+* Probabilistic thinking
+
+Probabilistic thinking is essentially trying to estimate using some
+tools of math and Logic the likelihood of any specific outcome
+happening the world as complex as it is is very rarely black and white
+so instead of deciding things as either happening or not happening
+probabilistic thinking encourages us to assign a probability estimate
+to that thing happening to get a more accurate result as a simple
+example let's say you read a headline in a local paper that says car
+break-ins On The Rise now without thinking probabilistically you
+probably might start freaking out about leaving your car parked on the
+side of the street but using probabilistic thinking you can add a
+little bit more context to this for example let's say you know that
+violent crime has been declining to its lowest rates in decades your
+city is now safer than it has been ever let's also say that the chance
+of your car getting broken into last year was one in ten thousand or
+point zero one percent the article states with accuracy probably that
+this type of crime has doubled it it is now two in ten thousand or
+point zero two percent now is that worth being terribly worried about
+probably not so the prior information here is key when we Factor it in
+we realize that our safety isn't really being compromised
+
+
+* Inversion
+
+Inversion is a powerful tool to improve your thinking because it helps
+you identify and remove different obstacles to success as a thinking
+tool it means approaching a situation from the opposite end of the
+natural starting point when most of us start a new project we'd like
+to think about what success would look like and then we set the goals
+and priorities around getting there using inversion though you think
+about what failure it would look like and what might cause that then
+you set goals and priorities to ensure you avoid whatever it is that
+might cause that failure instead of thinking about success and aiming
+for whatever that looks like you think about failure and make sure you
+stay away from whatever that looks like Charlie Munger has famously
+said:
+
+#+begin_quote
+All I want to know is where I'm going to die so I'll never go there.
+#+end_quote
+
+
+* Occam’s Razor
+
+Simpler explanations are more likely to be true than complicated ones
+this is the essence of Occam's razor a classic principle of logic and
+problem solving instead of wasting your time trying to disprove very
+complex and intertwined scenarios you can make decisions more
+confidently by basing them on the explanation that has the fewest
+moving Parts a simple example of Occam's razor is used to find the
+truth among conspiracy theories most conspiracy theories have many
+complicated and interwoven threads that seemingly paint a bigger
+picture but for conspiracy theory to be true all of those individual
+threads need to be proven 100 accurate that's really hard to do it's
+much simpler and much more rational honestly to assume the logical
+explanation because it has fewer dependencies for example the Titanic
+hitting an iceberg and sinking is pretty cut and dry there's not many
+dependencies on the other hand a lot of things had to have happened
+for the Freemasons to cause sinking of the Titanic which is believed
+by some doctors often look for the simplest solution to an ailment and
+scientists usually start with the Least Complicated hypothesis to
+disprove and then they go from there.
+
+
+* Hanlon’s Razor
+
+Another helpful razor is hanlon's Razor this model says that we should
+not attribute to maliciousness that which is easily explained by
+incompetence essentially just because someone does something that
+makes you mad or upsets you doesn't mean they're out to get you like
+we so often believe it's far more likely that they are just ignorant
+of something or something else is going on in their life for example
+if a good friend hasn't responded to your messages lately using
+hanlon's razor we can assume it's far more likely that they are busy
+with work or something personal came up than it is that they no longer
+want to be your friend.
+
+
+* Reciprocity
+
+Reciprocity or the principle of reciprocation if we want to get super
+fancy it states that for every action there is an equal and opposite
+reaction in life the same is true if you treat someone with kindness
+odds are they are going to reciprocate kindness back to you but the
+opposite is also true if you treat someone poorly you can't be
+surprised when they do the same to you reciprocity prompts us to
+rewrite the Golden Rule a little bit saying do unto others knowing
+that something will be done unto you.
+
+
+* Activation Energy
+
+Activation energy is a model from chemistry and it tells us that a
+chemical reaction needs a certain amount of energy before it can begin
+working one way to increase energy in a chemical reaction is with a
+catalyst this is something that can be added to a reaction to lower
+the activation energy that is required using this practically in our
+lives we can identify some catalysts like coffee or inspiration even
+that make doing hard work or a big project easier writing along paper
+is a really difficult task and takes a lot of activation energy to
+start and get going if you drink coffee you can help lower that
+activation energy and get you going a lot quicker when someone you
+know is struggling to get started on a project or finish a project try
+to identify what's causing so much activation energy to be required
+and see if you can somehow lower that threshold.
+
+
+* Epilogue
+
+If you enjoyed this video and you want more mental models content
+subscribe to our Weekly Newsletter every Sunday we'll send you
+Timeless ideas and actionable insights you can use for work in life
+you can go to fs.block newsletter or visit the link down in the
+description.
+
