--- a/2022-11-07-cultural-differences.org
+++ b/2022-11-07-cultural-differences.org
@@ -13,9 +13,10 @@ tags: [slaves, masters]
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
-#+CATEGORY: Writing
-#+TODO: RAW INIT | MAYBE
-#+TODO: TODO ACTIVE | DONE
+#+CATEGORY: ArtSel
+#+TODO: RAW INIT TODO ACTIVE | DONE
+#+TODO: DELAY LAG RETARD | STARK
+#+TODO: | FROZEN
 
 * TODO [#C] Intro
 SCHEDULED: <2023-06-30 Fri .+2d/3d>
