Several acid notes about Slavs

--- a/2022-11-07-cultural-differences.org
+++ b/2022-11-07-cultural-differences.org
@@ -27,6 +27,8 @@ SCHEDULED: <2024-01-12 Fri .+2d/3d>
 - State "DONE"       from "ACTIVE"     [2022-11-09 Wed 19:01]
 - State "DONE"       from "ACTIVE"     [2022-11-08 Tue 20:58]
 :LOGBOOK:
+CLOCK: [2023-09-28 Thu 08:26]--[2023-09-28 Thu 09:00] =>  0:34
+CLOCK: [2023-09-28 Thu 08:16]--[2023-09-28 Thu 08:22] =>  0:06
 CLOCK: [2022-11-15 Tue 08:33]--[2022-11-15 Tue 09:03] =>  0:30
 CLOCK: [2022-11-09 Wed 18:30]--[2022-11-09 Wed 18:45] =>  0:15
 CLOCK: [2022-11-08 Tue 16:32]--[2022-11-08 Tue 16:40] =>  0:08
@@ -41,6 +43,19 @@ Conventional wisdom postulates from the point of view of conditionally
 human, so slaves endeavor to find the way to be free.
 #+end_quote
 
+*BUT*
+
+#+begin_quote
+The only dream of slaves /is not freedom or liberty/, — they usually
+don't accustomed to live without strict and primitive orders from
+their master, can't make right decisions about their life, and doomed
+to death in misery on freedom.
+
+Theirs impudent wish is /slaves possession/.
+
+Theirs only dream is to become a *master*.
+#+end_quote
+
 The core idea is clear - all humans are equal. Yes, it is. They are
 equal before when society separate and purpose them. After this
 adaptation, usually accomplished in a young age, the metamorphosis is
@@ -48,17 +63,65 @@ so vivid and explicit, in some extraordinary cases it might be even
 palpable. E.g. unarguably that society cast each member to fit into
 its requirements.
 
+
+
+* Premises
+
+** Biology
+
+All biological subjects are mutable and some positive mutations might
+be observed in the next generations. This is evolution process.
+
+Those spontaneous (or intentional) mutations which increase chances on
+survival or even flourishing are positive, and cultivating through
+several generations become characteristic for particular population.
+
+** History
+
+Obviously that Eastern and Western Europe's population has different
+history.
+
+** Religion
+
+Widespread concept about Christianity is its initially target audience
+were slaves, and its the only purpose was to foster submissiveness in
+them.
+
+Not a secret that the primary dogma in Orthodox Church teaching is a
+complete deny of life on Earth. It dictates us the only life will be
+on Heaven and only after than your body is dead. And your soul will
+live there ethernally.
+
+** Politics
+
+Medieval witchhunt and mass repression in USSR have a lot in common,
+but the scale is incomparable. Seems like Stalin deliberately,
+intentionally and precisely eradicated 2-5% most liberal soviet
+people, and uproot the idea of freedom in this population for several
+centuries as minimum.
+
+
+* Thesis
+
 #+begin_quote
-The single one dream of a slave is not a /freedom/ or /liberty/, but his
-or her own slaves /possession/. E.g. the dream to become *master*.
+The pledge of /succeeding/ in closed, autocratic and slave society
+aren't some eminent qualities or faculties such as literacy, physical
+strength, experience etc., but /loyal, submissive and meek behavior/.
 #+end_quote
 
+* Antithesis
 
+#+begin_quote
+Discrepancy in behaviour is a miraculous feature, not a bug.
+#+end_quote
 
+* Hypothesis
 
-The pledge of succeeding in close, autocratic and enslaved population
-isn't some eminent qualities or faculties such as experience, physical
-strength etc, but loyal, submissive and meek /behavior/. 
+#+begin_example
+Due to the bundle of objective reasons
+most of the Ukrainians are slaves by their nature.
 
-Discrepancy
-
+And it might be noticeable observing their behavior,
+the acute distinction among theirs words with theirs actions,
+vain and futile attempts to mimic a free people's behavior.
+#+end_example
