Another session CV elaboration

--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -28,27 +28,28 @@ tags: [cv, info, about me, author]
 #+LaTeX_HEADER: \usepackage{courier}
 #+LATEX_HEADER: \usepackage[margin=0.5in]{geometry}
 
-* \alpha bout me
+* \Alpha{}bout me
 
  I'm a voracious reader and avid knowledge gatherer as long as I can
  remember myself. Initially it was just fun, a bit later I commenced a
  conscious approach to learning and found an urge necessity for
- meta-learning: skill allowing to study any subject much effective.
+ meta-learning: skill that allows to study any subject much effective.
 
- After acquisition of these skills, when I've [[http://bit.ly/2nPfOXR][learnt how to learn]],
- naturally appeared the next challenge:
+ After acquisition of these skill, when I've [[http://bit.ly/2nPfOXR][learnt how to learn]],
+ naturally loomed the next challenge:
 
  #+begin_quote
   What should I know to be healthy, wealthy and wise?
   #+end_quote
 
- Soon it became clear to me ~I should know everything~ for that and it
- is just impossible due to ~infinite amount of knowledge~. So I need
- to find a trade off, a some hack which allows me ~to be happy enough~
+ Soon it became clear to me /I should know everything/ for that and it
+ is just impossible due to /infinite amount of knowledge/. So I need
+ to find a trade off, a some hack which allows me /to be happy enough/
  to live and prosper. And I choose to study =Computer Science= that by
- definition ought to amplify my ability to sift, order and consume
- information. Furthermore these skills will liverage my capability to
- acquire the knowledge much faster.
+ definition ought to amplify my ability to sift, put it in order and
+ consume information. And, as an inevitable catalyser, [[http://bit.ly/1lk9C7p][model thinking]]
+ was a right tool in the hands. Furthermore these skills will liverage
+ my capability to acquire the knowledge much faster.
 
  Further, pondering in this direction pointed me out =Python= as the
  main tool to cope with a plethora of *Data*, =Emacs= as the handy
@@ -61,7 +62,36 @@ tags: [cv, info, about me, author]
  and now I'm proud that I'm in charge to solve most of feasible tasks.
 
  
-* \beta rief overview
+* \Beta{}rief overview
+
+* \Gamma{}ist
+
+* \Delta{}esired role
+
+  - A team catalyst, accelerator and propeller. Who next will fall in
+    love with Emacs and Python simultaneously?
+  - A synergy among the team is not just only a sum of knowledge, our
+    goal is to obtain its product literally:
+    #+BEGIN_QUOTE
+    $\displaystyle\sum_{n=1}^{team}\sum_{k=1}^{skill}\to\prod_{n=1}^{team}\sum_{k=1}^{skill}$
+    #+END_QUOTE
+  - In other words the desired aim should be a /knowledge
+    multiplication/: sustainable state of continuous intellectual
+    advancements for each collaborator in particular.
+  - A team of professionals with mostly contiguous skills.
+  - Right now for professional growth I'm crucially need in /knowledge
+    exchange/: who knows something fascinating and would share it with
+    me, please?
+
+
+
+  
+* \Epsilon{}macs Literate Programming
+  is a pivotal tool to forge a team synergy.
+
+
+  
+
 * \alpha init                                                      :noexport:
 
   #+CAPTION: Anton S. Kosinov
@@ -94,24 +124,7 @@ tags: [cv, info, about me, author]
   $\displaystyle\sum_{n=1}^{team}\sum_{k=1}^{skill}\Rightarrow\prod_{n=1}^{team}\sum_{k=1}^{skill}$
 
 
-* \xi{}macs Literate Programming
-  is a pivotal tool to forge a team synergy.
 
-* \Delta{}esired role
-  - A team catalyst, accelerator and propeller. Who next will fall in
-    love with Emacs and Python simultaneously?
-  - A synergy among the team is not just only a sum of knowledge, our
-    goal is to obtain its product literally:
-    #+BEGIN_QUOTE
-    $\displaystyle\sum_{n=1}^{team}\sum_{k=1}^{skill}\to\prod_{n=1}^{team}\sum_{k=1}^{skill}$
-    #+END_QUOTE
-  - In other words the desired aim should be a /knowledge
-    multiplication/: sustainable state of continuous intellectual
-    advancements for each collaborator in particular.
-  - A team of professionals with mostly contiguous skills.
-  - Right now for professional growth I'm crucially need in /knowledge
-    exchange/: who knows something fascinating and would share it with
-    me, please?
 
 
 * Patches
@@ -521,3 +534,4 @@ Python AWS Emacs SQL NoSQL
       by General Catalyst Partners and BuildGroup, bringing total
       funding to-date to $34 million. We’re growing fast and looking for
       A Players to take us to the next phase of our business.
+
